--- a/docs/modules/ROOT/pages/reference/extensions/fhir.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/fhir.adoc
@@ -143,37 +143,37 @@ By default, only FHIR version `R4` is enabled in native mode, since that is also
 | Configuration property | Type | Default
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.fhir.enable-dstu2]]`link:#quarkus.camel.fhir.enable-dstu2[quarkus.camel.fhir.enable-dstu2]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-fhir-enable-dstu2]]`link:#quarkus-camel-fhir-enable-dstu2[quarkus.camel.fhir.enable-dstu2]`
 
 Enable FHIR DSTU2 Specs in native mode.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.fhir.enable-dstu2_hl7org]]`link:#quarkus.camel.fhir.enable-dstu2_hl7org[quarkus.camel.fhir.enable-dstu2_hl7org]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-fhir-enable-dstu2_hl7org]]`link:#quarkus-camel-fhir-enable-dstu2_hl7org[quarkus.camel.fhir.enable-dstu2_hl7org]`
 
 Enable FHIR DSTU2_HL7ORG Specs in native mode.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.fhir.enable-dstu2_1]]`link:#quarkus.camel.fhir.enable-dstu2_1[quarkus.camel.fhir.enable-dstu2_1]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-fhir-enable-dstu2_1]]`link:#quarkus-camel-fhir-enable-dstu2_1[quarkus.camel.fhir.enable-dstu2_1]`
 
 Enable FHIR DSTU2_1 Specs in native mode.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.fhir.enable-dstu3]]`link:#quarkus.camel.fhir.enable-dstu3[quarkus.camel.fhir.enable-dstu3]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-fhir-enable-dstu3]]`link:#quarkus-camel-fhir-enable-dstu3[quarkus.camel.fhir.enable-dstu3]`
 
 Enable FHIR DSTU3 Specs in native mode.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.fhir.enable-r4]]`link:#quarkus.camel.fhir.enable-r4[quarkus.camel.fhir.enable-r4]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-fhir-enable-r4]]`link:#quarkus-camel-fhir-enable-r4[quarkus.camel.fhir.enable-r4]`
 
 Enable FHIR R4 Specs in native mode.
 | `boolean`
 | `true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.fhir.enable-r5]]`link:#quarkus.camel.fhir.enable-r5[quarkus.camel.fhir.enable-r5]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-fhir-enable-r5]]`link:#quarkus-camel-fhir-enable-r5[quarkus.camel.fhir.enable-r5]`
 
 Enable FHIR R5 Specs in native mode.
 | `boolean`
