--- a/docs/modules/ROOT/pages/reference/extensions/servlet.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/servlet.adoc
@@ -175,27 +175,27 @@ You will also need to enable serialization for the exception classes that you in
 | Configuration property | Type | Default
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.url-patterns]]`link:#quarkus.camel.servlet.url-patterns[quarkus.camel.servlet.url-patterns]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-url-patterns]]`link:#quarkus-camel-servlet-url-patterns[quarkus.camel.servlet.url-patterns]`
 
 A comma separated list of path patterns under which the CamelServlet should be accessible. Example path patterns:
 `/++*++`, `/services/++*++`
 | List of `string`
 | 
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.servlet-class]]`link:#quarkus.camel.servlet.servlet-class[quarkus.camel.servlet.servlet-class]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-servlet-class]]`link:#quarkus-camel-servlet-servlet-class[quarkus.camel.servlet.servlet-class]`
 
 A fully qualified name of a servlet class to serve paths that match `url-patterns`
 | `string`
 | `org.apache.camel.component.servlet.CamelHttpTransportServlet`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.servlet-name]]`link:#quarkus.camel.servlet.servlet-name[quarkus.camel.servlet.servlet-name]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-servlet-name]]`link:#quarkus-camel-servlet-servlet-name[quarkus.camel.servlet.servlet-name]`
 
 A servletName as it would be defined in a `web.xml` file or in the `jakarta.servlet.annotation.WebServlet++#++name()`
 annotation.
 | `string`
 | `CamelServlet`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.load-on-startup]]`link:#quarkus.camel.servlet.load-on-startup[quarkus.camel.servlet.load-on-startup]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-load-on-startup]]`link:#quarkus-camel-servlet-load-on-startup[quarkus.camel.servlet.load-on-startup]`
 
 Sets the loadOnStartup priority on the Servlet. A loadOnStartup is a value greater than or equal to zero, indicates
 to the container the initialization priority of the Servlet. If loadOnStartup is a negative integer, the Servlet is
@@ -203,72 +203,72 @@ initialized lazily.
 | `int`
 | `-1`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.async]]`link:#quarkus.camel.servlet.async[quarkus.camel.servlet.async]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-async]]`link:#quarkus-camel-servlet-async[quarkus.camel.servlet.async]`
 
 Enables Camel to benefit from asynchronous Servlet support.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.force-await]]`link:#quarkus.camel.servlet.force-await[quarkus.camel.servlet.force-await]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-force-await]]`link:#quarkus-camel-servlet-force-await[quarkus.camel.servlet.force-await]`
 
 When set to `true` used in conjunction with `quarkus.camel.servlet.async = true`, this will force route processing to
 run synchronously.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.executor-ref]]`link:#quarkus.camel.servlet.executor-ref[quarkus.camel.servlet.executor-ref]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-executor-ref]]`link:#quarkus-camel-servlet-executor-ref[quarkus.camel.servlet.executor-ref]`
 
 The name of a bean to configure an optional custom thread pool for handling Camel Servlet processing.
 | `string`
 | 
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.multipart.location]]`link:#quarkus.camel.servlet.multipart.location[quarkus.camel.servlet.multipart.location]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-multipart-location]]`link:#quarkus-camel-servlet-multipart-location[quarkus.camel.servlet.multipart.location]`
 
 An absolute path to a directory on the file system to store files temporarily while the parts are processed or
 when the size of the file exceeds the specified file-size-threshold configuration value.
 | `string`
 | `${java.io.tmpdir}`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.multipart.max-file-size]]`link:#quarkus.camel.servlet.multipart.max-file-size[quarkus.camel.servlet.multipart.max-file-size]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-multipart-max-file-size]]`link:#quarkus-camel-servlet-multipart-max-file-size[quarkus.camel.servlet.multipart.max-file-size]`
 
 The maximum size allowed in bytes for uploaded files. The default size (-1) allows an unlimited size.
 | `long`
 | `-1`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.multipart.max-request-size]]`link:#quarkus.camel.servlet.multipart.max-request-size[quarkus.camel.servlet.multipart.max-request-size]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-multipart-max-request-size]]`link:#quarkus-camel-servlet-multipart-max-request-size[quarkus.camel.servlet.multipart.max-request-size]`
 
 The maximum size allowed in bytes for a multipart/form-data request. The default size (-1) allows an unlimited
 size.
 | `long`
 | `-1`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.multipart.file-size-threshold]]`link:#quarkus.camel.servlet.multipart.file-size-threshold[quarkus.camel.servlet.multipart.file-size-threshold]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-multipart-file-size-threshold]]`link:#quarkus-camel-servlet-multipart-file-size-threshold[quarkus.camel.servlet.multipart.file-size-threshold]`
 
 The file size in bytes after which the file will be temporarily stored on disk.
 | `int`
 | `0`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.url-patterns]]`link:#quarkus.camel.servlet.-named-servlets-.url-patterns[quarkus.camel.servlet."named-servlets".url-patterns]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-url-patterns]]`link:#quarkus-camel-servlet-named-servlets-url-patterns[quarkus.camel.servlet."named-servlets".url-patterns]`
 
 A comma separated list of path patterns under which the CamelServlet should be accessible. Example path patterns:
 `/++*++`, `/services/++*++`
 | List of `string`
 | 
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.servlet-class]]`link:#quarkus.camel.servlet.-named-servlets-.servlet-class[quarkus.camel.servlet."named-servlets".servlet-class]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-servlet-class]]`link:#quarkus-camel-servlet-named-servlets-servlet-class[quarkus.camel.servlet."named-servlets".servlet-class]`
 
 A fully qualified name of a servlet class to serve paths that match `url-patterns`
 | `string`
 | `org.apache.camel.component.servlet.CamelHttpTransportServlet`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.servlet-name]]`link:#quarkus.camel.servlet.-named-servlets-.servlet-name[quarkus.camel.servlet."named-servlets".servlet-name]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-servlet-name]]`link:#quarkus-camel-servlet-named-servlets-servlet-name[quarkus.camel.servlet."named-servlets".servlet-name]`
 
 A servletName as it would be defined in a `web.xml` file or in the `jakarta.servlet.annotation.WebServlet++#++name()`
 annotation.
 | `string`
 | `CamelServlet`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.load-on-startup]]`link:#quarkus.camel.servlet.-named-servlets-.load-on-startup[quarkus.camel.servlet."named-servlets".load-on-startup]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-load-on-startup]]`link:#quarkus-camel-servlet-named-servlets-load-on-startup[quarkus.camel.servlet."named-servlets".load-on-startup]`
 
 Sets the loadOnStartup priority on the Servlet. A loadOnStartup is a value greater than or equal to zero, indicates
 to the container the initialization priority of the Servlet. If loadOnStartup is a negative integer, the Servlet is
@@ -276,46 +276,46 @@ initialized lazily.
 | `int`
 | `-1`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.async]]`link:#quarkus.camel.servlet.-named-servlets-.async[quarkus.camel.servlet."named-servlets".async]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-async]]`link:#quarkus-camel-servlet-named-servlets-async[quarkus.camel.servlet."named-servlets".async]`
 
 Enables Camel to benefit from asynchronous Servlet support.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.force-await]]`link:#quarkus.camel.servlet.-named-servlets-.force-await[quarkus.camel.servlet."named-servlets".force-await]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-force-await]]`link:#quarkus-camel-servlet-named-servlets-force-await[quarkus.camel.servlet."named-servlets".force-await]`
 
 When set to `true` used in conjunction with `quarkus.camel.servlet.async = true`, this will force route processing to
 run synchronously.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.executor-ref]]`link:#quarkus.camel.servlet.-named-servlets-.executor-ref[quarkus.camel.servlet."named-servlets".executor-ref]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-executor-ref]]`link:#quarkus-camel-servlet-named-servlets-executor-ref[quarkus.camel.servlet."named-servlets".executor-ref]`
 
 The name of a bean to configure an optional custom thread pool for handling Camel Servlet processing.
 | `string`
 | 
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.multipart.location]]`link:#quarkus.camel.servlet.-named-servlets-.multipart.location[quarkus.camel.servlet."named-servlets".multipart.location]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-multipart-location]]`link:#quarkus-camel-servlet-named-servlets-multipart-location[quarkus.camel.servlet."named-servlets".multipart.location]`
 
 An absolute path to a directory on the file system to store files temporarily while the parts are processed or
 when the size of the file exceeds the specified file-size-threshold configuration value.
 | `string`
 | `${java.io.tmpdir}`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.multipart.max-file-size]]`link:#quarkus.camel.servlet.-named-servlets-.multipart.max-file-size[quarkus.camel.servlet."named-servlets".multipart.max-file-size]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-multipart-max-file-size]]`link:#quarkus-camel-servlet-named-servlets-multipart-max-file-size[quarkus.camel.servlet."named-servlets".multipart.max-file-size]`
 
 The maximum size allowed in bytes for uploaded files. The default size (-1) allows an unlimited size.
 | `long`
 | `-1`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.multipart.max-request-size]]`link:#quarkus.camel.servlet.-named-servlets-.multipart.max-request-size[quarkus.camel.servlet."named-servlets".multipart.max-request-size]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-multipart-max-request-size]]`link:#quarkus-camel-servlet-named-servlets-multipart-max-request-size[quarkus.camel.servlet."named-servlets".multipart.max-request-size]`
 
 The maximum size allowed in bytes for a multipart/form-data request. The default size (-1) allows an unlimited
 size.
 | `long`
 | `-1`
 
-a|icon:lock[title=Fixed at build time] [[quarkus.camel.servlet.-named-servlets-.multipart.file-size-threshold]]`link:#quarkus.camel.servlet.-named-servlets-.multipart.file-size-threshold[quarkus.camel.servlet."named-servlets".multipart.file-size-threshold]`
+a|icon:lock[title=Fixed at build time] [[quarkus-camel-servlet-named-servlets-multipart-file-size-threshold]]`link:#quarkus-camel-servlet-named-servlets-multipart-file-size-threshold[quarkus.camel.servlet."named-servlets".multipart.file-size-threshold]`
 
 The file size in bytes after which the file will be temporarily stored on disk.
 | `int`
